--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -41,20 +41,35 @@
     <ImageButton
         android:id="@+id/startButton"
         style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="94dp"
-        android:layout_marginTop="261dp"
-        android:layout_marginEnd="94dp"
-        android:onClick="onStartButtonClick"
+        android:layout_width="289dp"
+        android:layout_height="107dp"
+        android:layout_marginStart="83dp"
 
+        android:layout_marginTop="26dp"
+        android:layout_marginEnd="39dp"
+        android:onClick="onStartButtonClick"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/helloText"
-        app:layout_constraintVertical_bias="1.0"
+        app:layout_constraintTop_toBottomOf="@+id/buttonDeveloper"
         app:srcCompat="@drawable/start"
         tools:ignore="ExtraText" />
+
+    <Button
+        android:id="@+id/buttonDeveloper"
+        android:layout_width="183dp"
+        android:layout_height="39dp"
+        android:layout_marginStart="160dp"
+        android:layout_marginTop="42dp"
+        android:layout_marginEnd="126dp"
+        android:layout_marginBottom="26dp"
+        android:background="#000000"
+        android:backgroundTint="#381E1E"
+        android:text="О разработчике"
+        app:layout_constraintBottom_toTopOf="@+id/startButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
